--- a/back_End/views/home.handlebars
+++ b/back_End/views/home.handlebars
@@ -1,5 +1,5 @@
 <form action="/save" method="POST">
-    <input type="number" id="counter" class="button" onclick="count()">{{counter}}</input>
-    <button id="reset" class="button" onclick="reset()">Reset</button>
+    <input type="button" id="counter"  name="counter" class="button" onclick="count()" value="{{counter}}"></input>
     <input type="submit" value="Save" >
 </form>
+<button id="reset" class="button" onclick="reset()">Reset</button>
